# wse-mttkrp

./: .gitignore  .gitmodules  .replit  Makefile  README.md  algpseudocodex.sty  annotate-equations.sty  apalike-ejor.bst  bibl.bib  lint.sh  main.tex  pyproject.toml  pythonhighlight.sty  replit.nix  requirements.in  requirements.sh  requirements.txt  setup.cfg  submodules.sh  tidy.sh
.config/: bashrc
.github/workflows/: ci.yaml
binder/: .gitignore  2024-10-20-example.ipynb  2025-08-07-mttkrp-dataflow.ipynb  2025-08-07-mttkrp-naive+A1.txt  2025-08-07-mttkrp-naive+A2.txt  2025-08-07-mttkrp-naive+A3.txt  2025-08-07-mttkrp-naive+data.txt  2025-08-07-mttkrp-naive+m1_krresult.txt  2025-08-07-mttkrp-naive+m1_matricized.txt  2025-08-07-mttkrp-naive+m1_mttkrpresult.txt  2025-08-07-mttkrp-naive+m2_krresult.txt  2025-08-07-mttkrp-naive+m2_matricized.txt  2025-08-07-mttkrp-naive+m2_mttkrpresult.txt  2025-08-07-mttkrp-naive+m3_krresult.txt  2025-08-07-mttkrp-naive+m3_matricized.txt  2025-08-07-mttkrp-naive+m3_mttkrpresult.txt  2025-08-07-mttkrp-naive.ipynb  README.md  clear_notebooks.sh  execute_notebooks.sh
fig/: example.tex
lib/: dependencies.tex
pylib/: __init__.py
script/: arxiv.sh  binder-add-branch.sh  binder-add.sh  binder-pull.sh  gitgc.sh
slurm/2024-10-20/: 2024-10-20-example.sh
tests/: conftest.py  test_pylib.py
text/: acknowledgement.tex  body.tex  frontmatter.tex  supplement.tex
text/body/: methods.tex  results.tex
tidy/: test_bibtex.sh  test_black.sh  test_isort.sh  test_make_clean.sh  test_tidy.sh
