[project]
authors = [
  {name = "Matthew Andres Moreno", email="m.more500@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
# end-user requirements
dependencies = [
]
description = "TODO"
license = {text = "MIT license"}
name  =  "pylib"
keywords = [
  "pylib",
]
requires-python = ">=3.10"
version = "0.0.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/mmore500/paperproject.git"
repository = "https://github.com/mmore500/paperproject"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

# adapted from https://tox.wiki/en/latest/example/package.html
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cython>=0.29",
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]

[tool.black]
line_length = 79

[tool.isort]
force_sort_within_sections = true
line_length = 79
profile = "black"
skip_gitignore = true
